# azure-devops

./: CHANGELOG.md  Dockerfile  GitVersion.yml  azure-pipelines copy.yml  azure-pipelines.yml  fh.md  filehej.txt  install-poetry.py  pyproject.toml  requirements.txt  run.py  tjaaaa.md  version.env
.azuredevops/: gitversion.yml
app/: __init__.py  main.py
k8s/kustomize/base/: ingress.yaml  kustomization.yaml  service.yaml
k8s/kustomize/staging/: deployment.yaml  ingress.yaml  kustomization.yaml
templates/: commonVars.yml  my-cool-pipline.yml  simple-param.yml
terraform/staging/: main.tf  variables.tf
