[tool.poetry]
name = "azure-devops"
version = "0.2.1"
description = ""
authors = ["Johan Almquist <johan.almquist@aranya.se>"]
readme = "README.md"
packages = [{include = "azure_devops"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
ara-simplify-incident = "^0.1.3.post1"
colorama = "^0.4.6"

[[tool.poetry.source]]
name = "aranya"
url = "https://pkgs.dev.azure.com/AranyaAB/Aranya-Simplify/_packaging/ARA-SIMPLIFY-FEED/pypi/simple/"
default = false
secondary = false


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
bump_message = "[skip-ci] release $current_version → $new_version"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
